# dbsec-open-api

./: .gitignore  HOWTOUSE.md  README.md  config.yaml.example  llms.txt  pyproject.toml  requirements.txt
dbsec_sdk/: __init__.py  auth.py  client.py  config.py  exceptions.py  rate_limiter.py  response.py
dbsec_sdk/apis/: __init__.py  registry.py
dbsec_sdk/client_examples/: kr-stock-trading-basic.ipynb  ov-stock-trading-basic.ipynb  quickstart.py
dbsec_sdk/websocket/: __init__.py  stream.py
docs/: api_support_matrix.md  errors_and_rate_limits.md  sdk_usage.md
examples/: dbsec_helper.py
examples/auth/: README.md  token_issue.py  token_revoke.py
examples/bond_order/: README.md  bond_inquire_balance.py  bond_inquire_balance_eval.py  bond_inquire_executions.py  bond_order.py  bond_order_cancel.py  bond_order_modify.py
examples/bond_quote/: README.md  bond_inquire_orderbook.py  bond_inquire_price.py  bond_search_detail.py
examples/bond_realtime/: README.md  bond_realtime_normal_execution.py  bond_realtime_normal_orderbook.py  bond_realtime_small_execution.py  bond_realtime_small_orderbook.py
examples/common/: README.md  inquire_group_list.py  inquire_issue_groups.py
examples/kr_chart/: README.md  kr_chart_chart_day.py  kr_chart_chart_min.py  kr_chart_chart_month.py  kr_chart_chart_tick.py  kr_chart_chart_tick_paged.py  kr_chart_chart_week.py
examples/kr_futopt_order/: README.md  kr_futopt_inquire_balance.py  kr_futopt_inquire_balance_eval.py  (+12 more)
mcp_server/: README.md  catalog.py  pyproject.toml  requirements.txt  run_server.py  server.py  sync.py
(+183 files in other folders)
