[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dbsec-sdk"
version = "0.1.0"
description = "DB증권 Open API Python 클라이언트 라이브러리"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "requests>=2.31.0",
    "websockets>=12.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
]
